# hudson

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  mix.exs  run_native.sh  verify_shopify.sh
assets/: package-lock.json  package.json
assets/css/: app.css
assets/css/01-settings/: tokens.css
assets/css/03-elements/: typography.css
assets/css/04-layouts/: products-index.css  session-host.css  session-index.css  session-producer.css
assets/css/05-components/: button.css  card.css  input.css  modal.css  navbar.css  product-grid.css  product-variants.css  theme-toggle.css
assets/css/06-utilities/: utilities.css
assets/js/: app.js  hooks.js
assets/js/hooks/: global_navigation.js  product_sortable.js  session_host_keyboard.js  test_worker_hook.js  (+1 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: README.md  architecture.md  domain_model.md  future_roadmap.md  implementation_guide.md  product_requirements.md
lib/: hudson.ex  hudson_web.ex
lib/hudson/: application.ex  catalog.ex  import.ex  local_repo.ex  local_repo_migrator.ex  mailer.ex  media.ex  repo.ex  runtime_smoke.ex  sessions.ex  settings.ex
lib/hudson_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  view_helpers.ex
lib/pavoi/: catalog.ex  settings.ex  tiktok_shop.ex
priv/import/: IMPORT_COMPLETE.md  README.md  convert_csv_to_import.exs  create_session.exs  extract_sheets_images.gs  import_products.exs
priv/repo/: seeds.exs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/: test_helper.exs
test/support/: conn_case.ex  data_case.ex
(+69 files in other folders)
