[package]
name = "hudson_desktop"
version = "0.1.0"
description = "Hudson desktop shell for the pilot"
authors = ["Hudson Team"]
edition = "2021"
rust-version = "1.70"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-execute", "custom-protocol"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "time", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
